Bug Fix: stretchující se bio

--- a/components/ExploreListings/_exploreListings.scss
+++ b/components/ExploreListings/_exploreListings.scss
@@ -5,6 +5,7 @@
     border-radius: 5px;
     margin-bottom: 2rem;
     max-height: 155px;
+    max-width: 100%;
     cursor: pointer;
     transition: all 200ms;
     &:hover{
@@ -24,7 +25,7 @@
         display: grid;
         grid-template-columns:50% 50%;
         grid-template-rows: auto auto auto;
-        width: 100%;
+        flex: 1;
         padding: 1rem 2rem;
         
         //Grid
@@ -57,9 +58,13 @@
     
         .content-bio{
             margin-bottom: 1rem;
-            color: $darkerGray;
-            font-size: 14px;
             padding-right: 1rem;
+            p{
+                max-width: 320px;
+                color: $darkerGray;
+                font-size: 14px;
+                word-wrap: break-word;
+            }
         }
     
         .content-more{
