--- a/styles/global.css
+++ b/styles/global.css
@@ -5053,6 +5053,7 @@ textarea {
   border-radius: 5px;
   margin-bottom: 2rem;
   max-height: 155px;
+  max-width: 100%;
   cursor: pointer;
   -webkit-transition: all 200ms;
   transition: all 200ms;
@@ -5077,7 +5078,9 @@ textarea {
       grid-template-columns: 50% 50%;
   -ms-grid-rows: auto auto auto;
       grid-template-rows: auto auto auto;
-  width: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   padding: 1rem 2rem;
 }
 
@@ -5128,9 +5131,14 @@ textarea {
 
 .explore-flatmate .listing-content .content-bio, .explore-flat .listing-content .content-bio {
   margin-bottom: 1rem;
+  padding-right: 1rem;
+}
+
+.explore-flatmate .listing-content .content-bio p, .explore-flat .listing-content .content-bio p {
+  max-width: 320px;
   color: #6b717f;
   font-size: 14px;
-  padding-right: 1rem;
+  word-wrap: break-word;
 }
 
 .explore-flatmate .listing-content .content-more a, .explore-flat .listing-content .content-more a {
